--- a/styles/sass/general/_base.scss
+++ b/styles/sass/general/_base.scss
@@ -23,6 +23,7 @@ a {
 
 img {
 	max-width: 100%;
+	height: auto;
 	display: inline-block;
 	border: none;
 }
